gtk(budgie): Fix .budgie-run-dialog styling
- Use regular $surface as surface color instead of $base
- Add vertical padding to list
- Fix corner radii of scrollbars

--- a/src/_sass/gtk/apps/_budgie.scss
+++ b/src/_sass/gtk/apps/_budgie.scss
@@ -524,8 +524,6 @@ calendar.raven-calendar {
 .budgie-run-dialog {
   @extend %budgie_dialog;
 
-  background-color: $base;
-
   entry.search {
     font-size: 120%;
     padding: $container-padding 8px + $container-padding;
@@ -534,7 +532,24 @@ calendar.raven-calendar {
     background-color: transparent;
   }
 
-  list .dim-label { color: $text; }
+  list {
+    padding: 4px 0;
+    background-color: transparent;
+
+    .dim-label { color: inherit; }
+  }
 
   scrolledwindow { border-top: 1px solid $divider; }
+
+  scrollbar {
+    &.right,
+    &.bottom {
+      border-bottom-right-radius: $corner-radius;
+    }
+
+    &.left,
+    &.bottom {
+      border-bottom-left-radius: $corner-radius;
+    }
+  }
 }
